--- a/src/BCad.Electron/package.json
+++ b/src/BCad.Electron/package.json
@@ -7,9 +7,11 @@
     "name": "brettfo"
   },
   "dependencies": {
-    "electron": "1.6.11"
+    "electron": "1.6.11",
+    "vscode-jsonrpc": "3.3.1"
   },
   "devDependencies": {
+    "electron": "1.6.11",
     "electron-packager": "8.7.1"
   },
   "scripts": {
