--- a/src/BCad.Server/BCad.Server.csproj
+++ b/src/BCad.Server/BCad.Server.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="StreamJsonRpc" Version="1.1.92" />
   </ItemGroup>
 
 </Project>
