--- a/src/BCad/BCad.WPF/packages.config
+++ b/src/BCad/BCad.WPF/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="OpenTK" version="2.0.0" targetFramework="net461" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net461" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net472" />
   <package id="WpfLightToolkit" version="1.0.1" targetFramework="net461" />
   <package id="Xamarin.Forms" version="3.1.0.697729" targetFramework="net461" />
   <package id="Xamarin.Forms.Platform.WPF" version="3.1.0.697729" targetFramework="net461" />
