--- a/src/BCad/BCad/BCad.csproj
+++ b/src/BCad/BCad/BCad.csproj
@@ -11,7 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\IxMilia.BCad.Core\IxMilia.BCad.Core.csproj" />
+    <ProjectReference Include="..\..\IxMilia.BCad.FileHandlers\IxMilia.BCad.FileHandlers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
